--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ GOBID_DATABASE_NAME="gobid"
 GOBID_DATABASE_USER="docker"
 GOBID_DATABASE_PASSWORD="docker"
 GOBID_DATABASE_HOST="localhost"
+GOBID_DATABASE_HOST="localhost"
+GOBID_CSRF_KEY="5wa5i96u7ocy77jlsm00ybwdpyzd1nh2"
